--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^3.0.0",
     "express-validator": "^6.6.0",
     "express-winston": "^4.0.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.3.4",
     "winston": "^3.3.3"
   }
